<?xml version="1.0" encoding="utf-8"?>
<com.delexus.imitationzhihu.RadioImageGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_group"
    style="@style/LayoutStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/white">

    <com.delexus.imitationzhihu.RadioImageButton
        android:id="@+id/btn_feed"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_main_btn_normal"
        android:button="@drawable/ic_bottom_feed"
        android:checked="true"
        android:clickable="true"
        android:contentDescription="@string/main_btn_feed"
        android:focusable="true"
        android:gravity="center" />

    <com.delexus.imitationzhihu.RadioImageButton
        android:id="@+id/btn_discover"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/bg_main_btn_normal"
        android:button="@drawable/ic_bottom_discover"
        android:clickable="true"
        android:contentDescription="@string/main_btn_discover"
        android:focusable="true"
        android:gravity="center" />

    <com.delexus.imitationzhihu.RadioImageButton
        android:id="@+id/btn_notification"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_main_btn_normal"
        android:button="@drawable/ic_bottom_notification"
        android:clickable="true"
        android:contentDescription="@string/main_btn_notification"
        android:focusable="true"
        android:gravity="center" />

    <com.delexus.imitationzhihu.RadioImageButton
        android:id="@+id/btn_message"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_main_btn_normal"
        android:button="@drawable/ic_bottom_message"
        android:clickable="true"
        android:contentDescription="@string/main_btn_message"
        android:focusable="true"
        android:gravity="center" />

    <com.delexus.imitationzhihu.RadioImageButton
        android:id="@+id/btn_more"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_main_btn_normal"
        android:button="@drawable/ic_bottom_more"
        android:clickable="true"
        android:contentDescription="@string/main_btn_more"
        android:focusable="true"
        android:gravity="center" />
</com.delexus.imitationzhihu.RadioImageGroup>