<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent">

    <com.delexus.imitationzhihu.view.FloatingImageButton
        android:id="@+id/fab_question"
        style="@style/Elevation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_circle_white"
        android:padding="5dp"
        android:src="@drawable/ic_fab_question"
        android:tint="?attr/imageTintColor"
        app:layout_constraintRight_toRightOf="@+id/fab_answer"
        app:layout_constraintTop_toBottomOf="@+id/fab_answer" />

    <com.delexus.imitationzhihu.view.FloatingImageButton
        android:id="@+id/fab_answer"
        style="@style/Elevation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_circle_white"
        android:padding="5dp"
        android:src="@drawable/ic_fab_answer"
        android:tint="?attr/imageTintColor"
        app:layout_constraintRight_toRightOf="@+id/fab_idea"
        app:layout_constraintTop_toBottomOf="@+id/fab_idea"
        app:srcCompat="@drawable/ic_fab_answer" />

    <com.delexus.imitationzhihu.view.FloatingImageButton
        android:id="@+id/fab_idea"
        style="@style/Elevation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_circle_white"
        android:padding="5dp"
        android:src="@drawable/ic_fab_idea"
        android:tint="?attr/imageTintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569"
        app:srcCompat="@drawable/ic_fab_idea" />

    <com.delexus.imitationzhihu.view.FloatingButton
        android:id="@+id/text_idea"
        style="@style/Elevation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_rectangle_white_round"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/fab_idea"
        android:textColor="?attr/textColorBackground"
        app:layout_constraintRight_toLeftOf="@+id/fab_idea"
        app:layout_constraintTop_toTopOf="@+id/fab_idea" />

    <com.delexus.imitationzhihu.view.FloatingButton
        android:id="@+id/text_answer"
        style="@style/Elevation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_rectangle_white_round"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/fab_answer"
        android:textColor="?attr/textColorBackground"
        app:layout_constraintRight_toLeftOf="@+id/fab_answer"
        app:layout_constraintTop_toTopOf="@+id/fab_answer" />

    <com.delexus.imitationzhihu.view.FloatingButton
        android:id="@+id/text_question"
        style="@style/Elevation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="-8dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_rectangle_white_round"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/fab_question"
        android:textColor="?attr/textColorBackground"
        app:layout_constraintRight_toLeftOf="@+id/fab_question"
        app:layout_constraintTop_toTopOf="@+id/fab_question" />
</android.support.constraint.ConstraintLayout>